--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "gatsby": "^3.9.0",
     "gatsby-background-image": "^1.5.3",
+    "gatsby-image": "^3.10.0",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^3.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
